# Patient/Mercure.Patient.API/Controllers/PatientController.cs
@@ -3,7 +3,6 @@ using MediatR;
 using Mercure.Common;
 using Mercure.Patient.Application.Commands;
 using Mercure.Patient.Application.Commands.Model;
-using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
 
 namespace Mercure.Patient.API.Controllers
@@ -17,9 +16,16 @@ namespace Mercure.Patient.API.Controllers
         {
         }
 
-        [Authorize]
         [HttpGet("CreatePatient", Name = "CreatePatient")]
         public async Task CreatePatient(PatientCommandModel patient) =>
             await Mediator.Send(new CreatePatientCommand(patient));
+
+        [HttpGet("UpdatePatient", Name = "UpdatePatient")]
+        public async Task UpdatePatient(PatientCommandModel patient) =>
+             await Mediator.Send(new UpdatePatientCommand(patient));
+
+        [HttpGet("Consult", Name = "Consult")]
+        public async Task Consult(PatientCommandModel patient) =>
+             await Mediator.Send(new UpdatePatientCommand(patient));
     }
 }
